# fastapi-cognito

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  main.py
app/api/: auth.py  health.py  users.py
app/core/: auth.py
app/static/: app.js  style.css
app/templates/: index.html
terraform/: cognito.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_auth.py  test_health.py  test_users.py
